<resources>
    <string name="app_name">XpenseBook</string>

    <string name="current_balance">Current Balance</string>
    <string name="total_income">Total Income</string>
    <string name="total_expense">Total Expenses</string>
    <string name="monthly_overview">Monthy Overview</string>
    <string name="expense_breakdown">Expense Breakdown</string>

    <string name="all">All</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="add_transaction">Add Transaction</string>
    <string name="edit_transaction">Edit Transaction</string>
    <string name="delete_transaction">Delete Transaction</string>

    <string name="add_category">Add Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="delete_category">Delete Category</string>


    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="category">Category</string>

    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>

    <string name="tab_dashboard">Dashboard</string>
    <string name="tab_transactions">Transactions</string>
    <string name="tab_categories">Categories</string>

    <string name="error_amount_required">Amount is required</string>
    <string name="error_catoegory_required">Category is required</string>
    <string name="error_invalid_amount">Invalid Amount</string>
    <string name="error_empty_description">Description is empty</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_category">Category</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_transaction">Transaction</string>
    <string name="title_report">Report</string>
    <string name="balance">Balance</string>

</resources>