<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.money.xpensesbookproject.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_transaction"
        android:name="com.money.xpensesbookproject.ui.transactions.TransactionsFragment"
        android:label="@string/title_transaction"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.money.xpensesbookproject.ui.category.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_report"
        android:name="com.money.xpensesbookproject.ui.report.ReportDetailFragment"
        android:label="@string/title_report"
        tools:layout="@layout/fragment_report" />
</navigation>