<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical">

    <!-- Header: TabLayout + Add Button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/typeTabLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tab_background_gradient_dashboard"
            android:paddingVertical="8dp"
            app:tabIndicatorColor="@color/white"
            app:tabIndicatorFullWidth="false"
            app:tabIndicatorHeight="3dp"
            app:tabMode="fixed"
            app:tabRippleColor="@color/ripple_color"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="@color/tab_indicator">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expenses" />
        </com.google.android.material.tabs.TabLayout>


        <!-- Add Category Button -->
        <ImageView
            android:id="@+id/btnAddCategory"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/add_category"
            android:padding="8dp"
            android:src="@drawable/ic_add"
            app:tint="@color/accent_primary" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:padding="8dp"
        android:background="@drawable/white_bg">

        <!-- RecyclerView for categories -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategories"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:clipToPadding="false"
            android:paddingBottom="16dp"
            android:scrollbars="vertical" />

    </LinearLayout>

</LinearLayout>
