<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical"
    tools:context=".ui.dashboard.DashboardFragment">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lytBal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/balance"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtBalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="0.0"
                    android:textAppearance="?attr/textAppearanceHeadline4"
                    android:textColor="@color/color_primary"
                    app:layout_constraintStart_toStartOf="@id/lytBal"
                    app:layout_constraintTop_toBottomOf="@id/lytBal" />

                <TextView
                    android:id="@+id/txtYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2025"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="@color/gray_600"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/txtMon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/down"
                    android:drawableTint="@color/accent_primary"
                    android:text="Aug"
                    android:textColor="@color/accent_primary"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtYear" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_income"
                        android:textAppearance="?attr/textAppearanceBody2" />

                    <TextView
                        android:id="@+id/txtTotalIncome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="0.0"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:textColor="@color/income_green" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_expense"
                        android:textAppearance="?attr/textAppearanceBody2" />

                    <TextView
                        android:id="@+id/txtTotalExpenses"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="0.0"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:textColor="@color/expenses_red" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="8dp">

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/title_transaction"-->
<!--            android:textColor="@color/accent_primary"-->
<!--            android:textSize="20sp" />-->
        <!-- RecyclerView for categories -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTransaction"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:paddingBottom="16dp"
            android:scrollbars="vertical" />

    </LinearLayout>

</LinearLayout>
